Trying to fix alignment

--- a/css/Style-Pastel.css
+++ b/css/Style-Pastel.css
@@ -122,7 +122,7 @@ a:hover {
 
 .resume-details {
   color: black;
-  text-align: left;
+  font-weight: normal;
 }
 
 
